--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,3 +27,10 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
+dependencies {
+  implementation 'com.google.android.gms:play-services-location:21.0.1'
+  implementation 'com.squareup.okhttp3:okhttp:4.11.0'
+  // keep the rest of your dependencies
+}
