--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
+     implementation "androidx.security:security-crypto:1.0.0"
+     implementation 'com.google.android.gms:play-services-location:21.0.1'
+     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
+     implementation "androidx.security:security-crypto:1.0.0"
 }
 
 apply from: 'capacitor.build.gradle'
